--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
   <url>https://github.com/jcaillon/proparse</url>
 
   <properties>
-	<ikvm>ikvm\bin</ikvm>
+	<ikvm>${project.basedir}\ikvm\bin</ikvm>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <proparse.net.dir>${project.basedir}\..\proparse.net</proparse.net.dir>
   </properties>
 
   <dependencies>
@@ -145,14 +146,19 @@
                   you can add between <target> and </target> in a
                   build.xml.
                 -->
+				<mkdir dir="${proparse.net.dir}"/>
 				<exec executable="${ikvm}\ikvmc.exe">
 					<arg value="-out:${project.build.directory}\proparse.net.dll"/>
 					<arg value="-version:${project.version}"/>
-					<arg value="-keyfile:proparse.net.snk"/>
+					<arg value="-keyfile:${project.basedir}\src\resources\proparse.net.snk"/>
 					<arg value="-nowarn:0108"/>
 					<arg value="${project.build.directory}\${project.artifactId}-${project.version}.jar"/>
 					<arg value="${project.build.directory}\lib\*"/>
 				</exec>
+				<copy file="${ikvm}\ikvm.openjdk.core.dll" tofile="${proparse.net.dir}\ikvm.openjdk.core.dll" />
+				<copy file="${ikvm}\ikvm.runtime.dll" tofile="${proparse.net.dir}\ikvm.runtime.dll" />
+				<copy file="${project.basedir}\src\resources\assemblies.xml" tofile="${proparse.net.dir}\assemblies.xml" />
+				<copy file="${project.build.directory}\proparse.net.dll" tofile="${proparse.net.dir}\proparse.net.dll" />
               </target>
             </configuration>
             <goals>
